    + [BR] Fix other source-is-missing FP. (Closes: #813013).
  * checks/fields.pm:
    + [NT] Emit "no-homepage-field" only for source packages.
  * checks/files.pm:
    + [JW] Treat packages without Multi-Arch field as if they had
      "Multi-Arch: no".  Thanks to Bas Couwenberg for the bug report.
  * checks/scripts.desc:
    + [JW] Fix typos.
  * checks/testsuite.{desc,pm}:
    + [JW, NT] Apply patch from Christian Seiler to accept DEP-8 tests
      being symlinks to existing files in the source package.  Thanks
      to Raphaël Hertzog for suggesting it.  (Closes: #809440)
  * checks/upstream-metadata.{desc,pm}:
    + [NT] Apply patch from Petter Reinholdtsen to check that the
      upstream metadata file is valid YAML if present.  (Closes: #813904)

  * commands/lab-tool.pm:
    + [NT] New utility to handle most laboratory operations.
  * commands/lintian:
    + [NT] New location for "frontend/lintian".
    + [NT] Refactored to use "dplint" to compute the include dirs.
    + [NT] Remove -S, -R and -r, which are now supported in the new
      lintian-lab-tool command.

  * data/spelling/corrections:
    + [JW] Fix some corrections.
    + [JW] Add more corrections.

  * debian/control:
    + [JW] Switch from libyaml-perl to libyaml-libyaml-perl in
      Build-Depends and Suggests. (Lintian has been using the latter
      package since 2.5.31.)
    + [NT] Add dependency on libyaml-libyaml-perl for the new
      upstream-metadata check.
  * debian/{lintian.links,manpages,rules}:
    + [NT] Update to install the new lab-tool command.

  * frontend/lintian:
    + [NT] Move the code to "commands/lintian" and leave a symlink to
      dplint to replace it.

  * helper/coll/objdump-info-helper:
    + [NT] Avoid collecting unused information.

  * lib/Lintian/Path.pm:
    + [NT] Remove the _file_info cache field to avoid paying
      for all "file(1)" info twice.
  * lib/Lintian/Collect/Binary.pm:
    + [NT] Remove unnecessary values on members in the