@@ -2,4 +2,3 @@ E: init.d-script-registration: init-script-is-not-a-file etc/init.d/bar
 W: init.d-script-registration: init.d-script-missing-lsb-section etc/init.d/foo.in
 W: init.d-script-registration: script-in-etc-init.d-not-registered-via-update-rc.d etc/init.d/bar
 W: init.d-script-registration: script-in-etc-init.d-not-registered-via-update-rc.d etc/init.d/foo.in
-X: init.d-script-registration: package-contains-broken-symlink etc/init.d/bar foo
