@@ -149,4 +149,3 @@ W: binary: unquoted-string-in-menu-item usr/lib/menu/binary needs:1
 W: binary: unquoted-string-in-menu-item usr/lib/menu/binary needs:2
 W: binary: unquoted-string-in-menu-item usr/share/menu/binary needs:1
 W: binary: unquoted-string-in-menu-item usr/share/menu/binary needs:2
-X: binary: package-contains-broken-symlink usr/share/doc/binary/html/ch3.html usr/share/doc/binary/htm/ch1.html
