@@ -3,5 +3,4 @@ Sequence: 6000
 Version: 1.0
 Description: General tests broken symlinks
 Test-For:
- package-contains-broken-symlink
  package-contains-broken-symlink-wildcard
